# maelstrom

./: .gitignore  README.md  REFACTOR_PLAN.md  conftest.py  maelstrom.db  maelstrom.db-shm  maelstrom.db-wal  package-lock.json  package.json  pyproject.toml  qa.md  两阶段智能意图识别方案.md
agent/: __init__.py  base.py  context.py  event_bus.py  models.py  registry.py  test_context.py  test_event_bus.py  test_models.py
agent/agents/: index_agent.py  ocr_agent.py  orchestrator_agent.py  plan_agent_v2.py  prompt_agent_v2.py  qa_agent.py  review_agent.py  router_agent.py  terminology_agent.py  test_index_agent.py  test_ocr_agent.py  test_orchestrator_agent.py  test_qa_agent.py  test_qa_v2_smoke.py  test_review_agent.py  test_terminology_agent.py  test_translation_agent.py  translation_agent.py  verifier_agent_v2.py  writing_agent_v2.py
agent/core/: qa_context.py  qa_llm.py  qa_log_analyzer.py  qa_logger.py  qa_memory.py  qa_metrics.py  qa_prompts.py  types.py
agent/qa_context_v1/: clarification.py  enrichment.py  indexer.py  kernel.py  models.py  store.py
agent/qa_orchestration/: __init__.py  contracts.py  contracts_v1.py  dag_runner_v1.py  plan_agent_v1.py  subagent_registry.py  subagent_runner.py  test_plan_worker_v1.py  worker_registry_v1.py  worker_router_v1.py
agent/tools/: base.py  (+14 more)
backend/: .env.example  requirements.txt
core/: __init__.py
docs/: README.md
electron/: main.cjs  preload.cjs
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
scripts/: run_eval.py  start.mjs  stop.mjs
tests/: conftest.py
(+383 files in other folders)
