[project]
name = "maelstrom"
version = "0.1.0"
description = "Maelstrom V0 — Gap Engine + QA Chat"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
full = [
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "paper-qa>=5",
    "arxiv>=2.1",
    "Levenshtein>=0.25",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
